--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-haptics": "~13.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.18",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@expo/vector-icons": "^14.0.3",
-    "expo-router": "~3.5.23",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-haptics": "~13.0.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
   "private": true
